fix main height on mobile

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -3,6 +3,7 @@
         padding: 26px;
         flex-direction: column;
         justify-content: flex-start;
+        height: 100%;
     }
     .main{
         width: 100%;
